--- a/projeto-lincoln/css/style.css
+++ b/projeto-lincoln/css/style.css
@@ -1,75 +1,33 @@
-/* CSS reset
-body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,blockquote,th,td { 
-    margin:0;
-    padding:0;
-}
-html,body {
-    margin:0;
-    padding:0;
-}
-table {
-    border-collapse:collapse;
-    border-spacing:0;
-}
-fieldset,img { 
-    border:0;
-}
-input{
-    border:1px solid #b0b0b0;
-    padding:3px 5px 4px;
-    color:#979797;
-    width:190px;
-}
-address,caption,cite,code,dfn,th,var {
-    font-style:normal;
-    font-weight:normal;
-}
-ol,ul {
-    list-style:none;
-}
-caption,th {
-    text-align:left;
-}
-h1,h2,h3,h4,h5,h6 {
-    font-size:100%;
-    font-weight:normal;
-}
-q:before,q:after {
-    content:'';
-}
-abbr,acronym { border:0;
-}
-
-header {
-    background-color: #233B6E; 
-}*/
-
+/* ===================== reset do css ====================== */
 * {
     margin: 0;
     padding: 0;
+    text-align: center;
 }
 
-.box {
-    width: 200px;
-    height: 200px;
+/* ===================== HEADER ====================== */
+
+.top-container {
+    background-color: #14274e;
+    padding: 100px;
 }
 
-.primeira {
-    background-color: bisque;
-    border: 10px solid black;
-    padding: 20px;
+h1 {  
+    width: 20%;
+    margin: 0 auto;
 }
 
-.segunda {
-    background-color: red;
-    border: 20px solid black;
-    margin-left: 260px;
+.clique-mouse {
+    width: 26px;
+    position: absolute;
 }
 
-.terceira {
-    background-color: yellow;
-    border: 10px;
-    border-style: solid;
-    border-color: black;
-    margin-left: 500px;
+.one-mouse {
+    top: 25%;
+    left: 69%;
+}
+
+.two-mouse {
+    left: 20%;
+    top: 79%;
 }
