--- a/projeto-lincoln/css/style.css
+++ b/projeto-lincoln/css/style.css
@@ -1,8 +1,10 @@
 /* ===================== reset do css ====================== */
-* {
+body {
     margin: 0;
     padding: 0;
     text-align: center;
+    font-family: sans-serif;
+    color: white;
 }
 
 /* ===================== HEADER ====================== */
