--- a/projeto-lincoln/css/style.css
+++ b/projeto-lincoln/css/style.css
@@ -3,8 +3,7 @@ body {
     margin: 0;
     padding: 0;
     text-align: center;
-    font-family: sans-serif;
-    color: white;
+    font-family: 'Merriweather', serif;
 }
 
 /* ===================== HEADER ====================== */
@@ -14,9 +13,16 @@ body {
     padding: 100px;
 }
 
-h1 {  
-    width: 20%;
+.top-container h1 {  
+    font-family: 'Sacramento', cursive;
     margin: 0 auto;
+    font-size: 5.625rem;
+    color: #66BFBF;
+}
+
+.top-container p  {
+    font-size: 1.5rem;
+    color: #66BFBF;
 }
 
 .clique-mouse {
