--- a/projeto-lincoln/css/style.css
+++ b/projeto-lincoln/css/style.css
@@ -1,19 +1,73 @@
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+
 /* ===================== reset do css ====================== */
 body {
     margin: 0;
     padding: 0;
     text-align: center;
     font-family: 'Merriweather', serif;
+    
+}
+
+hr {
+    border: dotted 6px black;
+    border-bottom: none;
+    width: 5%;
+    margin: 30px auto;
 }
 
 /* ===================== HEADER ====================== */
 
 .top-container {
+    padding-top: 50px;
     background-color: #14274e;
-    padding: 100px;
 }
 
-.top-container h1 {  
+.top-container h1 { 
+
     font-family: 'Sacramento', cursive;
     margin: 0 auto;
     font-size: 5.625rem;
@@ -21,8 +75,13 @@ body {
 }
 
 .top-container p  {
+    margin-top: 0;
     font-size: 1.5rem;
     color: #66BFBF;
+}
+
+.img-banner {
+    width: 25%;
 }
 
 .clique-mouse {
@@ -38,4 +97,98 @@ body {
 .two-mouse {
     left: 20%;
     top: 79%;
+}
+
+/* ===================== MAIN ====================== */
+.middle-container {
+    margin: 0 auto;
+    width: 1080px;
+}
+
+.skills {
+    display: block;
+}
+
+.profile img {
+    margin-top: 3%;
+    width: 10%;
+    border-radius: 50%;
+}
+
+.profile p{
+    line-height: normal;
+    margin-bottom: 25px;
+}
+
+main h3 {
+    margin-top: 10px;
+    margin-bottom: 25px;
+    font-size: 1.5rem;
+    color: #11999E;
+}
+
+.skill-row img {
+    width: 55%;
+    margin-bottom: 10px;
+}
+
+.skill-row {
+    display: inline-block;
+    /* margin: 0 auto; */
+    /* width: 50%; */
+    width: 33%;
+}
+
+.contact-me {
+    width: 40%;
+    margin: 40px auto 60px; 
+}
+
+.contact-me p {
+    margin-bottom: 50px;
+}
+
+.btn {
+    -webkit-border-radius: 28;
+    -moz-border-radius: 28;
+    border-radius: 28px;
+    -webkit-box-shadow: 0px 1px 3px #666666;
+    -moz-box-shadow: 0px 1px 3px #666666;
+    box-shadow: 0px 1px 3px #666666;
+    font-family: Courier New;
+    color: #ffffff;
+    font-size: 27px;
+    background: #11cdd4;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+  }
+  
+  .btn:hover {
+    background: #3cb0fd;
+    background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+    text-decoration: none;
+  }
+
+.bottom-container {
+    padding: 50px;
+    background-color: #11cdd4;
+}
+
+.bottom-container a {
+    text-decoration: none;
+    color: #135b5e;
+    font-family: 'Montserrat', sans-serif;
+    margin: 10px 20px;
+}
+
+.bottom-container a:hover {
+    color: #103031;
+}
+
+.bottom-container p {
+    margin-top: 25px;
 }
