--- a/appdukeza/css/styles.css
+++ b/appdukeza/css/styles.css
@@ -58,7 +58,9 @@ p {
 }
 
 /* ================================== title image ================================== */
-
+.row-direita {
+    margin-bottom: 37px;
+}
 
 .title-image {
     width: 50%;
@@ -66,6 +68,7 @@ p {
     margin-left: 80px;
     z-index: 1;
     position: absolute;
+    left: 18%;
 }
 
 /* ================================== buttons ================================== */
