feito alteração no header do projeto, para responsivo em 1028px

--- a/appdukeza/css/styles.css
+++ b/appdukeza/css/styles.css
@@ -140,3 +140,17 @@ p {
 .pricing-column {
     padding: 3% 2%;
 }
+
+/* =============================== reponsivo ==================== */
+
+
+@media (max-width: 1028px) {
+    .header-title {
+        text-align: center;
+    }
+
+    .title-image {
+        position: static;
+        transform: rotate(0);
+    }
+}
