--- a/appdukeza/css/styles.css
+++ b/appdukeza/css/styles.css
@@ -141,6 +141,23 @@ p {
     padding: 3% 2%;
 }
 
+/* ============================cta============================= */
+
+#cta {
+    background-color: #ff4c68;
+    color: #FFFFFF;
+    padding: 7% 15%;
+    text-align: center;
+}
+
+.cta-heading {
+    font-family: "montserrat";
+    font-size: 3.5rem;
+    line-height: 1.5;
+    text-align: center;
+}
+
+
 /* =============================== reponsivo ==================== */
 
 
