--- a/projetos/gameDice/style.css
+++ b/projetos/gameDice/style.css
@@ -1,5 +1,45 @@
+/* ============================== GRERAL ============================== */
 * {
     background-color: #032152;
     font-family: "Indie Flower", cursive;
     color: #FFFFFF;
+}
+
+/* ============================== TAGS GERAIS ============================== */
+
+h1 {
+    margin: 30px;
+    font-size: 'Lobster', cursive;
+    text-shadow: 4px 2px #13171c;
+    font-size: 5rem;
+    color: #4ECCA3;
+}
+
+h2 {
+    font-size: 2rem;
+    color: #4ECCA3;
+}
+
+img {
+    width: 80%;
+}
+
+footer {
+    text-align: center;
+    margin-top: 10%;
+    color: #eee;
+    font-size: 1.5rem;
+}
+
+/* ============================== CLASSES ============================== */
+
+.container {
+    width: 70%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.dice {
+    display: inline-block;
+    text-align: center;
 }
