--- a/projetos/gameFlappyBird/css/flappy.css
+++ b/projetos/gameFlappyBird/css/flappy.css
@@ -38,10 +38,10 @@ body {
 }
 
 .passaro {
-    position: relative;
+    position: absolute;
     width: 60px;
-    left: calc(50% - 30px);
-    top: 50%;
+    left: calc(50% - 30px); 
+    /*   */
 }   
 
 .par-de-barreiras {
